--- a/Task04/guess_number/composer.json
+++ b/Task04/guess_number/composer.json
@@ -16,7 +16,9 @@
     "autoload": {
         "files": [
             "src/Controller.php",
-            "src/View.php"
+            "src/View.php",
+            "src/DataBase",
+            "GameModel"
         ]
     }
 }
