--- a/Task04/guess_number/composer.json
+++ b/Task04/guess_number/composer.json
@@ -18,7 +18,7 @@
             "src/Controller.php",
             "src/View.php",
             "src/DataBase",
-            "GameModel"
+            "src/GameModel"
         ]
     }
 }
